--- a/CSS/index.css
+++ b/CSS/index.css
@@ -302,11 +302,8 @@ body {
 .carousel img {
   width: 100%;
   display: none;
-  -webkit-transition: opacity 1s;
-  -moz-transition: opacity 1s;
-  -o-transition: opacity 1s;
-  transition: opacity 1s;
-}
-html {
-  background: black;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
