--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -37,5 +37,10 @@
   img {
     .width-100();
     display: none;
+
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
   }
 }
